fix logo blurred and add text shadow on header title

--- a/app/assets/stylesheets/height.scss
+++ b/app/assets/stylesheets/height.scss
@@ -15,7 +15,12 @@ body {
 
 #logo-color-white {
   &.color {
-    background: image-url("logo_white.png") no-repeat;
+    background: image-url("logo3.png") no-repeat;
+    background-size: 50px;
+
+    span {
+      color: #ffffff;
+    }
   }
 }
 
