--- a/app/assets/stylesheets/pages/home_page.scss
+++ b/app/assets/stylesheets/pages/home_page.scss
@@ -6,12 +6,14 @@
   height: 700px !important;
 
   .bold {
-    font-weight: 700 !important;
+    font-weight: 400 !important;
     font-size: 70px !important;
+    text-shadow: 0px 2px 0px #a5a5a5;
   }
 
   .semibold {
-    font-weight: 600 !important;
+    font-weight: 400 !important;
+    text-shadow: 0px 2px 0px #a5a5a5;
   }
 
 	.hero {
